syntax = "proto3";

import "rococo-common.proto";

package ru.grpc.rococo;

option java_multiple_files = true;
option java_package = "ru.rococo.grpc";
option java_outer_classname = "RococoArtistProto";

service RococoArtistService {
  rpc GetArtist (Artist) returns (Artist) {}
  rpc AllArtists (AllArtistsRequest) returns (ArtistsResponse) {}
  rpc AddArtist (Artist) returns (Artist) {}
  rpc UpdateArtist (Artist) returns (Artist) {}
}

message Artist {
  string id = 1;
  string name = 2;
  string biography = 3;
  string photo = 4;
}

message ArtistsResponse {
  repeated Artist artistList = 1;
  int32 total_count = 2;
}

message AllArtistsRequest {
  string name = 1;
  Pageable pageable = 2;
}
